--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "joi": "^17.6.0",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.6",
@@ -35,6 +39,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -65,6 +70,11 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "@shared/(.*)$": "<rootDir>/shared/$1",
+      "@clients/(.*)$": "<rootDir>/clients/$1",
+      "@auth/(.*)$": "<rootDir>/auth/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
