Add wallet module, controller, service, repository and model

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@shared/*": ["src/shared/*"],
       "@auth/*": ["src/auth/*"],
       "@database/*": ["src/database/*"],
+      "@wallets/*": ["src/wallets/*"],
       "@clients/*": ["src/clients/*"]
     }
   }
